@@ -22,6 +22,7 @@
    REAL(dbl)              :: emax      ! egrid extrema 
    REAL(dbl)              :: delta     ! i\delta for GFs
    !
+   REAL(dbl):: de
    REAL(dbl), ALLOCATABLE :: egrid(:)  ! grid values
    !
    LOGICAL :: alloc = .FALSE.
@@ -35,7 +36,7 @@
    PUBLIC :: egrid
    PUBLIC :: alloc
    !
-   PUBLIC :: egrid_init
+   PUBLIC :: egrid_init, de
    PUBLIC :: egrid_deallocate
 
 
@@ -50,7 +51,6 @@ CONTAINS
    !**********************************************************
    IMPLICIT NONE
        CHARACTER(10)      :: subname="egrid_init"
-       REAL(dbl):: de
        INTEGER  :: ie, ierr
 
        IF ( alloc )   CALL errore(subname,'already allocated', 1 )
